--- a/ui/app/templates/split/list.jinja2
+++ b/ui/app/templates/split/list.jinja2
@@ -9,15 +9,12 @@
     <p>Split — a function that withdraws the same amount of money from all participants and sends it to one
         recipient.
     </p>
-    <p>Splits are useful when you want to collectively buy something expensive.</p>
-    <p>Splits can be used to fairly distribute the cost of shared expenses, like rent or utilities.</p>
     <p>An example:
     <ul>
-        <li>you create a Split for 50 USD</li>
-        <li>5 people join your Split as participants</li>
-        <li>you Perform the Split</li>
-        <li>a confirmed Transaction for 10 USD is created from each participant to you</li>
-        <li>now you have 50 USD</li>
+        <li>you create a Split for 30 USD</li>
+        <li>2 people join your Split as participants</li>
+        <li>you <i>perform</i> the split</li>
+        <li>you receive 2 completed Transactions for 15 USD <i>(calculated share)</i> from each participant</li>
     </ul>
     </p>
 
