--- a/ui/app/templates/entity/edit.jinja2
+++ b/ui/app/templates/entity/edit.jinja2
@@ -12,5 +12,5 @@
     {{ render_form(auth_form) }}
 </form>
 <h2>Tags</h2>
-{{ tag_manager("entity", entity.id, entity.tags, all_tags) }}
+{{ tag_manager("entities", entity.id, entity.tags, all_tags) }}
 {% endblock %}
