--- a/ui/app/templates/split/edit.jinja2
+++ b/ui/app/templates/split/edit.jinja2
@@ -18,7 +18,7 @@
     </table>
 </form>
 <h2>Tags</h2>
-{{ tag_manager("split", split.id, split.tags, all_tags) }}
+{{ tag_manager("splits", split.id, split.tags, all_tags) }}
 
 <!-- Include the JS widget file -->
 <script src="/static/js/entitySelector.js"></script>
