--- a/ui/app/templates/split/add_participant.jinja2
+++ b/ui/app/templates/split/add_participant.jinja2
@@ -5,9 +5,6 @@
 {% block title %}Add split {{ split.id }} participant{% endblock %}
 
 {% block content %}
-<td class="right-align">
-    {% if split.collected_amount | float > 0 %}{{ split.collected_amount }}{% endif %}
-</td>
 <table>
     <tr>
         <td>Current share</td>
@@ -24,14 +21,7 @@
             {{ split.share_preview.next_share }} {{ split.currency | upper }}
             {% endif %}
         </td>
-    </tr>
-    <tr>
-        <td>Impact</td>
-        <td>
-            {% if split.share_preview.impact_percent | float > 0 %}
-            -{{ split.share_preview.impact_percent }}%
-            {% endif %}
-        </td>
+        <td>(with one more participant)</td>
     </tr>
 </table>
 <h2>Participant</h2>
