--- a/ui/app/templates/transaction/edit.jinja2
+++ b/ui/app/templates/transaction/edit.jinja2
@@ -1,5 +1,6 @@
 {% extends 'base.jinja2' %}
 {% from 'form.jinja2' import render_form %}
+{% from 'widgets/tag_manager.jinja2' import tag_manager %}
 
 {% block title %}Edit transaction {{ transaction.id }}{% endblock %}
 
@@ -8,6 +9,8 @@
 <form method="post">
     {{ render_form(form, except=('from_entity_name', 'to_entity_name', 'from_entity_id', 'to_entity_id')) }}
 </form>
+<h2>Tags</h2>
+{{ tag_manager("transactions", transaction.id, transaction.tags, all_tags) }}
 {% else %}
 <p>This transaction is confirmed and can not be edited anymore.</p>
 {% endif %}
