add transaction search form to ui

--- a/ui/app/templates/form.jinja2
+++ b/ui/app/templates/form.jinja2
@@ -9,7 +9,7 @@
         {% endif %}
         <td>
             {% if field.data is not none %}
-            {{ field(value=field.data or (field.label.text if field.type == 'SubmitField' else ''))
+            {{ field(value=(field.label.text if field.type == 'SubmitField' else '') or field.data)
             }}
             {% else %}
             {{ field() }}
