--- a/ui/app/templates/transaction/list.jinja2
+++ b/ui/app/templates/transaction/list.jinja2
@@ -1,6 +1,8 @@
 {% extends "base.jinja2" %}
 {% from "transaction/macro_list.jinja2" import transaction_list with context %}
 {% from 'widgets/pagination.jinja2' import pagination_control %}
+{% from 'widgets/entity_selector.jinja2' import entity_selector %}
+{% from 'form.jinja2' import render_form %}
 
 {% block title %}Transactions{% endblock %}
 
@@ -16,12 +18,57 @@
         indicating where money have entered the system and where they left it.
     </p>
     <h3>Transaction status</h3>
-    <p>Transaction can be Completed or Created if you decide that you want to create a draft one / wait for a
-        confirmation from other party. Created Transactions are like written cheques. Don't use them too
+    <p>Transaction can be Completed or Draft if you decide that you want to wait for a
+        confirmation from other party. Draft Transactions are like written cheques. Don't use them too
         frequently.</p>
 </details>
 
 <p><a href="{{ url_for('transaction.add') }}">Add</a></p>
+
+<p>
+<details>
+    <summary>search</summary>
+    <p>
+    <form method="get">
+        <table>
+            <tr>
+                <td>Entity</td>
+                <td>
+                    {{ entity_selector('entity', filter_form.entity_name.data, filter_form.entity_id.data) }}
+                </td>
+            </tr>
+            <tr>
+                <td>To Entity</td>
+                <td>
+                    {{ entity_selector('to_entity', filter_form.to_entity_name.data, filter_form.to_entity_id.data) }}
+                </td>
+            </tr>
+            <tr>
+                <td>From Entity</td>
+                <td>
+                    {{ entity_selector('from_entity', filter_form.from_entity_name.data,
+                    filter_form.from_entity_id.data)
+                    }}
+                </td>
+            </tr>
+            <tr>
+                <td>Actor Entity</td>
+                <td>
+                    {{ entity_selector('actor_entity', filter_form.actor_entity_name.data,
+                    filter_form.actor_entity_id.data)
+                    }}
+                </td>
+            </tr>
+            {{ render_form(filter_form, except=('from_entity_name', 'to_entity_name', 'from_entity_id', 'to_entity_id',
+            'actor_entity_name', 'actor_entity_id', 'entity_name', 'entity_id', 'csrf_token'), new_table=False) }}
+        </table>
+    </form>
+    </p>
+</details>
+</p>
+
 {{ transaction_list(transactions) }}
-{{ pagination_control(page, total, limit, 'transaction.list') }}
+{{ pagination_control(page, total, limit) }}
+
+<script src="/static/js/entitySelector.js"></script>
 {% endblock %}
