--- a/ui/app/templates/entity/detail.jinja2
+++ b/ui/app/templates/entity/detail.jinja2
@@ -117,5 +117,5 @@
 
 <h2>Transactions</h2>
 {{ transaction_list(transactions) }}
-{{ pagination_control(page, total, limit, 'entity.detail', id=entity.id) }}
+{{ pagination_control(page, total, limit) }}
 {% endblock %}
