--- a/ui/app/templates/widgets/entity_selector.jinja2
+++ b/ui/app/templates/widgets/entity_selector.jinja2
@@ -3,10 +3,10 @@
     <!-- Search input: uses a fixed name 'name' so that the query parameter is always 'name' -->
     <input id="{{ prefix }}_name" type="search" name="name" placeholder="search..." autocomplete="off"
         hx-trigger="input changed delay:250ms, name" hx-get="/hx/search" hx-target="#{{ prefix }}_search_results"
-        value="{{ initial_name }}">
+        value="{{ initial_name or '' }}">
     <!-- ID input remains unique per widget -->
     id: <input id="{{ prefix }}_id" class="entity-id-field small" type="number" name="{{ prefix }}_id" placeholder="id"
-        value="{{ initial_id }}">
+        value="{{ initial_id or '' }}">
     <!-- Container for search results -->
     <div id="{{ prefix }}_search_results"></div>
 </div>
