--- a/ui/app/templates/split/list.jinja2
+++ b/ui/app/templates/split/list.jinja2
@@ -1,6 +1,8 @@
 {% extends "base.jinja2" %}
 {% from "split/macro_list.jinja2" import split_list with context %}
 {% from 'widgets/pagination.jinja2' import pagination_control %}
+{% from 'widgets/entity_selector.jinja2' import entity_selector %}
+{% from 'form.jinja2' import render_form %}
 
 {% block title %}Splits{% endblock %}
 {% block content %}
@@ -21,6 +23,40 @@
 </details>
 
 <p><a href="{{ url_for('split.add') }}">Add</a></p>
+
+
+<p>
+<details>
+    <summary>search</summary>
+    <p>
+    <form method="get">
+        <table>
+            <tr>
+                <td>Actor Entity</td>
+                <td>
+                    {{ entity_selector('actor_entity', filter_form.actor_entity_name.data,
+                    filter_form.actor_entity_id.data)
+                    }}
+                </td>
+            </tr>
+            <tr>
+                <td>Recipient Entity</td>
+                <td>
+                    {{ entity_selector('recipient_entity', filter_form.recipient_entity_name.data,
+                    filter_form.recipient_entity_id.data)
+                    }}
+                </td>
+            </tr>
+            {{ render_form(filter_form, except=('recipient_entity_name', 'recipient_entity_id', 'actor_entity_name',
+            'actor_entity_id', 'csrf_token'), new_table=False) }}
+        </table>
+    </form>
+    </p>
+</details>
+</p>
+
 {{ split_list(splits) }}
 {{ pagination_control(page, total, limit, 'split.list') }}
+
+<script src="/static/js/entitySelector.js"></script>
 {% endblock %}
