--- a/ui/app/static/style.css
+++ b/ui/app/static/style.css
@@ -123,5 +123,9 @@ table tr:not(:has(input[type="submit"])):nth-child(even) {
 }
 
 .secondary {
-  filter: opacity(0.5);
+  filter: opacity(0.6);
+}
+
+.errors {
+  color: red;
 }
