--- a/ui/app/templates/resident_fee/index.jinja2
+++ b/ui/app/templates/resident_fee/index.jinja2
@@ -1,9 +1,8 @@
 {% extends "base.jinja2" %}
-
+{% block title %}Resident Fee{% endblock %}
 {% block content %}
 {% set month_names = ["", "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"] %}
-<h1>Resident Fees</h1>
-<table class="table">
+<table>
     <thead>
         <tr>
             <th></th>
